--- a/src/industries/delivery/styles/delivery.scss
+++ b/src/industries/delivery/styles/delivery.scss
@@ -43,6 +43,7 @@
   right: 0;
   z-index: 1000;
   background: var(--dark);
+  color: var(--surface);
   padding: 0 2rem;
   height: 72px;
   display: flex;
@@ -145,6 +146,8 @@
       transform: rotate(-45deg) translate(5px, -5px);
     }
   }
+
+  & a { color: inherit; }
 }
 
 /* Mobile Overlay Nav */
